--- a/data/config.json
+++ b/data/config.json
@@ -18,7 +18,7 @@
     "grid_dr_dz": [0.05, 0.08],
     "grid_nr_nz": [7, 7],
 
-    "chrom_permutation_path": "data/skin_perm_01.npy",
+    "chrom_permutation_dir": "data/skin_perm",
     "chrom_parameters": [[
         [0.0000, 0.0000, 1],
         [0.0000, 0.0000, 1],
